--- a/css/HomePage.css
+++ b/css/HomePage.css
@@ -1,37 +1,80 @@
-body{
+body {
     font-family: 'Ubuntu', sans-serif;
-    background-color: #43b8ff;
 }
-.container{
+
+.containerHome {
+    border-radius: 15px;
+    width: 100%;
+    height: 565px;
+    background-color: #9EA4EC;
+}
+
+.header_home {
+    border-radius: 13px;
+    border: 1px solid #9EA4EC;
+    height: 50px;
     position: relative;
 }
-.header_home{
-    border: 1px solid red;
-    height: 50px;
+.posisionbtn{
+    display: flex;
+    margin-top: 13px;
+    margin-left: 10px;
+
+}
+button.btn.btn-primary.active {
+    margin-left: 5px;
+}
+.footer_home {
+    border: 1px solid #9EA4EC;
+    height: 60px;
+    border-radius: 13px;
 }
 .body_home{
     display: flex;
-    flex-direction: row;
+    margin-top: 3px;
+    height: 450px;
 }
 .content_menu{
-    position: absolute;
-    height: 450px;
-    width:  50%;
+    background-color: #FFFFFF;
+    width: 575px;
+    height: 100%;
     border: 1px solid blue;
-    background-color: #FFFFFF;
- }
-.content_bill{
-    margin-left: 635px;
-    height: 450px;
-    position: absolute;
-    width:48%;
-    border: 1px solid green;
-    background-color: #FFFFFF;
+    border-radius: 13px;
+
 }
-.footer_home{
-    width: 100%;
-    margin-top: 450px;
-    position: absolute;
+.content_bill{
+    background-color: #FFFFFF;
+    margin-left: 10px;
+    width: 658px;
+    height: 100%;
     border: 1px solid red;
-    height: 50px;
+    border-radius: 13px;
+}
+input{
+    width: 300px !important;
+}
+.btn-circle {
+    margin-top: 3px;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    font-size: 15px;
+    line-height: 1.428571429;
+    border-radius: 15px;
+}
+.fa-plus:before {
+    content: "\f067";
+    margin-left: -3.5px;
+}
+.btn-circle-lg {
+    margin-top: -3px;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    font-size: 15px;
+    line-height: 1.428571429;
+    border-radius: 15px;
+}
+button.btn btn-primary btn-circle-lg i{
+    font-size: 30px;
 }
